test/tests/stages/4_logical_and_relational_operators/valid/ne_true.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  -
  const int(1)
  !=
  -
  const int(2)
  ;
  }
