test/tests/stages/4_logical_and_relational_operators/invalid_parse/missing_const.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[11]:
  int
  identifier(main)
  (
  void
  )
  {
  const int(10)
  <=
  !
  ;
  }
